<resources>
    <string name="app_name">Fortune Teller</string>
    <string name="action_settings">Settings</string>
    <string name="question_text">Ask Mr. Cleo a question. If no, say STOP</string>
    <string name="question_entry">Enter Question</string>
    <string name="send_button">Send</string>
    <string name="send_button_hint">Send Question</string>
    <string name="invalid_title">Invalid Entry</string>
    <string name="invalid_message">Please try again -__-</string>
    <string name="go_back_button_text">BACK</string>
    <string name="toast_back_text">Clicked BACK</string>
    <string name="exit_app_text">EXIT App</string>
    <string name="fortune_title_text">Ahh...your Fortune says:</string>
    <string name="ask_again_text">Ask Again?</string>
    <string name="talk_button">TALK</string>
    <string name="question_prefix_text">(Who, What ,Where, When, Why, How, Will)</string>
</resources>