<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivityFragment"
    android:weightSum="1">

    <TextView
        android:text="@string/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:typeface="serif"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/question_prefix_text"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/question_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:hint="@string/question_entry"
            android:textSize="15sp"
            android:paddingBottom="10dp"/>
        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_button"
            android:textSize="15sp" />
    </LinearLayout>

    <RelativeLayout
        android:background="@drawable/fortuneteller"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/talk_button"
            android:id="@+id/talk_button"
            android:layout_marginBottom="39dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="#97e9ac"
            android:clickable="true" />
    </RelativeLayout>

</LinearLayout>